# Counterpoignant

./: .gitignore  CLAUDE.md  CONDITIONING_PLAN.md  RL_TRAINING_PLAN.md  ROADMAP.md  analyze_kernscores.sh  benchmark_fugue_metrics.py  convert_openscore.sh  download_jrp.sh  download_kernscores.sh  download_kunstderfuge.py  download_openscore_quartets.sh  find_most_dissonant.sh  fix_fugue_labels.py  overnight.sh  pyproject.toml  realtime_roadmap.md  sweep_temp_minp.py  test_data_processing.sh
data_run1_backup/: piece_ids.json
data_run1_backup/Data_run1_backup/: corpus_stats.json  mode.json  tokenizer.json
docs/: pope-pretraining-evaluation.md  project-summary.md  scp-data-overwrite.md  server-conditioning-check.md  training-pipeline.md
scripts/: analyze_kernscores.py  analyze_kernscores.sh  chorale_dual_pool_top3.py  convert_openscore.sh  download_kernscores.sh  download_kunstderfuge.py  download_openscore_quartets.sh  fugue_dual_pool_top3.py  overnight.sh  sweep_temp_minp.py  test_data_processing.sh
src/bach_gen/: __init__.py  cli.py
src/bach_gen/data/: analysis.py  augmentation.py  conditioning.py  (+5 more)
tests/: test_checkpoint_vocab_resize.py  test_chunk_sequences.py  test_conditioning.py  test_contrapuntal_rhythm.py  test_corpus_filters.py  test_curriculum.py  test_generation_safety.py  test_kunstderfuge_all_dataset_fold.py  test_kunstderfuge_deperform.py  test_kunstderfuge_scarlatti_reduction_quality.py  test_kunstderfuge_voice_sep.py  test_kv_cache.py  test_music_theory.py  test_pope.py  test_scorer_weights.py  test_staged_context.py  test_thematic_recall.py
(+1621 files in other folders)
