[project]
name = "bach-gen"
version = "0.1.0"
description = "Generate Bach-style 2-part inventions using a small Transformer model"
requires-python = ">=3.12"
dependencies = [
    "music21>=9.1",
    "miditok>=3.0",
    "torch>=2.2",
    "click>=8.1",
    "rich>=13.0",
    "mido>=1.3",
    "scipy>=1.12",
    "pydantic>=2.6",
    "numpy>=1.26",
    "requests>=2.32.5",
]

[project.scripts]
bach-gen = "bach_gen.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bach_gen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
